objects/MN_Opportunities_Information__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, St. Eustatius, Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_region__c</fullName>
        <formula>TEXT(Country__c) &amp; Multinational_OppMultinational_Oortunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Opportunity_Value__c</fullName>
        <label>Projected Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multinational_OppMultinational_Oortunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Participating Countries</relationshipLabel>
        <relationshipName>Participating_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Participating Countries</label>
    <nameField>
        <displayFormat>MN-{0000000000}</displayFormat>
        <label>Participating Countries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participating Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>